--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
                     <img id="generatedImage" src="" alt="Generated Image" class="max-w-xs h-auto rounded-lg shadow-xl"
                         style="display: none;">
                 </div>
-
+    <audio autoplay>
+    	<source src = "hams.mp3" type = "audio/mp3"/>
+    </audio>
     <script>
         const fileInput = document.getElementById('fileInput');
         const imagePreview = document.getElementById('imagePreview');
